--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>cloud-provider-payment-8001</module>
+        <module>cloud-consumer-order-80</module>
     </modules>
 
     <!--  统一管理jar包版本  -->
@@ -19,7 +20,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <lombok.version>1.16.18</lombok.version>
+        <lombok.version>1.18.12</lombok.version>
         <!--<mysql.version>5.1.47</mysql.version>-->
         <mysql.version>8.0.20</mysql.version>
         <!--<druid.version>1.1.16</druid.version>-->
